--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ header {
     padding: 16px 24px;
     font-weight: 600;
     border: 0;
+    cursor: pointer;
 }
 
 .btn:focus {
@@ -892,13 +893,15 @@ footer {
 
 .fill-form-fields-bottom {
     margin: 0 65px;
-    padding-bottom: 25px;
+    padding-bottom: 25px;;
 }
 
 .fill-form-fields-button {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding-top: 25px;
+    width: 100%;
 }
 
 .input {
